2010-11-01  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Simon Fraser.

        Setting attr repeatDur=0 on SVG element causes hang
        https://bugs.webkit.org/show_bug.cgi?id=48785

        Test: svg/animations/repeatDur-zero.xhtml

        * svg/animation/SVGSMILElement.cpp: Fixing bound checking for legal repeatDur values.
2010-11-01  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Simon Fraser.

        Setting attr repeatDur=0 on SVG element causes hang
        https://bugs.webkit.org/show_bug.cgi?id=48785

        * svg/animations/repeatDur-zero.xhtml: Added. Tests if setting attr repeatDur=0 causes a hang or not.


Canonical link: https://commits.webkit.org/61562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71066 268f45cc-cd09-0410-ab3c-d52691b4dbfc